--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.1",
+    "daisyui": "^2.15.2",
     "framer-motion": "^6.3.4",
     "json-server": "^0.17.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
@@ -43,14 +47,14 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4"
   },
   "proxy": "http://localhost:3001"
 }
