house marketplace, TODO firebase snaps & some functions was not type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,14 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["./*"],
-      "@/api/*": ["api/*"],
+      "@/firebase/*": ["firebase/*"],
       "@/components/*": ["components/*"],
       "@/styles/*": ["styles/*"],
       "@/helpers/*": ["helpers/*"],
       "@/pages/*": ["pages/*"],
-      "@/interfaces/*": ["interfaces/*"]
+      "@/interfaces/*": ["interfaces/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/assets/*": ["assets/*"]
     },
     "target": "es5",
     "lib": [
