--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "react_front_to_back",
+  "name": "home-marketplace",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.3",
     "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.1",
     "daisyui": "^2.15.2",
+    "firebase": "^9.8.3",
     "framer-motion": "^6.3.4",
-    "json-server": "^0.17.0",
+    "leaflet": "^1.8.0",
     "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
+    "swiper": "^8.2.3",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "craco start",
-    "server": "json-server --watch db.json --port 3001",
-    "dev": "concurrently \"yarn server\" \"yarn start\"",
+    "dev": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
@@ -48,14 +48,18 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/leaflet": "^1.7.11",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^8.3.4"
-  },
-  "proxy": "http://localhost:3001"
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-leaflet": "^2.8.2",
+    "@types/uuid": "^8.3.4",
+    "prettier": "^2.6.2"
+  }
 }
