--- a/package.json
+++ b/package.json
@@ -1,65 +1,54 @@
 {
-  "name": "home-marketplace",
-  "version": "0.1.0",
-  "private": true,
+  "name": "client",
+  "version": "0.0.1",
+  "description": "support desk",
+  "main": "index.js",
+  "source": "./client/index.html",
+  "alias": {
+    "@/client": "./client/",
+    "@/server": "./server/"
+  },
+  "license": "MIT",
+  "scripts": {
+    "server": "nodemon server/server.ts",
+    "start": "parcel",
+    "watch": "parcel watch",
+    "build": "parcel build"
+  },
   "dependencies": {
-    "autoprefixer": "^10.4.7",
-    "daisyui": "^2.15.2",
-    "firebase": "^9.8.3",
-    "framer-motion": "^6.3.4",
-    "leaflet": "^1.8.0",
-    "postcss": "^8.4.14",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.2.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
-    "react-leaflet": "^4.0.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.4",
-    "swiper": "^8.2.3",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.4.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "dev": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react-toastify": "^9.0.4"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/leaflet": "^1.7.11",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-leaflet": "^2.8.2",
-    "@types/uuid": "^8.3.4",
-    "prettier": "^2.6.2"
+    "@babel/core": "^7.12.0",
+    "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.3",
+    "nodemon": "^2.0.16",
+    "parcel": "^2.6.0",
+    "parcel-plugin-typescript": "^1.0.0",
+    "prettier": "^2.6.2",
+    "process": "^0.11.10",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
