--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/firebase/*": ["firebase/*"],
-      "@/components/*": ["components/*"],
-      "@/styles/*": ["styles/*"],
-      "@/helpers/*": ["helpers/*"],
-      "@/pages/*": ["pages/*"],
-      "@/interfaces/*": ["interfaces/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/assets/*": ["assets/*"]
+      "@/client*": ["./client*"],
+      "@/server*": ["./server*"]
     },
     "target": "es5",
     "lib": [
@@ -25,7 +18,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -33,6 +26,6 @@
     "jsx": "react-jsx",
   },
   "include": [
-    "src"
+    "client"
   ]
 }
