--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "client",
   "version": "0.0.1",
   "description": "support desk",
-  "main": "index.js",
+  "proxy": "http://localhost:5001",
+  "main": "./client/index.js",
   "source": "./client/index.html",
   "alias": {
-    "@/client": "./client/",
-    "@/server": "./server/"
+    "@/client": "./client/"
   },
   "license": "MIT",
   "scripts": {
+    "dev": "concurrently \"yarn server\" \"parcel\" ",
     "server": "nodemon server/server.ts",
     "start": "parcel",
     "watch": "parcel watch",
     "build": "parcel build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.2.1",
@@ -36,6 +38,7 @@
     "@babel/core": "^7.12.0",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.12",
@@ -43,6 +46,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.16",
     "parcel": "^2.6.0",
     "parcel-plugin-typescript": "^1.0.0",
