--- a/.proxyrc
+++ b/.proxyrc
@@ -2,7 +2,7 @@
   "/api": {
     "target": "http://localhost:5001/",
     "pathRewrite": {
-      "^/api": "api"
+      "^/api": "/api"
     }
   }
 }
